--- a/Airlines/admin/css/styles.css
+++ b/Airlines/admin/css/styles.css
@@ -8,7 +8,7 @@
 
 body{
     background: #f3f5f9;
-    min-width: 1080px;
+    min-width: 960px;
 }
 
 .wrapper{
@@ -23,13 +23,12 @@ body{
     .container{
         /* border: 1px red solid; */
         max-width: 75%;
+        margin-left: 20%;
     }
 
 .wrapper .sidebar{
     position: fixed;
-    width: 20%;
-        min-width: 150px;
-        max-width: 200px;
+    width: 200px;
     height: 100%;
     background: rgb(47, 135, 236);
     padding: 30px 0;
@@ -69,7 +68,6 @@ body{
     flex-wrap: wrap;
     margin-top: calc(-1 * var(--bs-gutter-y));
     margin-right: calc(-.5 * var(--bs-gutter-x));
-    margin-left: 10%;
 }
 
 .card-header {
@@ -128,9 +126,9 @@ body{
     color: red;
 }
 
-@media (max-width:1080px){
+/* @media (max-width:1080px){
     .wrapper{
-        /* display: none; */
+        
     }
     .row{
         margin: 5% auto;
@@ -141,4 +139,4 @@ body{
 
     }
     
-}
+} */
