--- a/Airlines/css/book1-view.css
+++ b/Airlines/css/book1-view.css
@@ -34,7 +34,7 @@ a{
 
 /* main card */
 #main-card{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     border: 1px rgb(220, 218, 218) solid;
         border-radius: 10px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
