Revert "added recursion so image name wont"
This reverts commit 3eb1a3038f8258cb70a387fd89dcece8d836af54.

--- a/Airlines/css/style.css
+++ b/Airlines/css/style.css
@@ -445,8 +445,6 @@ section{
 
 .trips .image-menu{
     padding: 0;
-    /* width: 320px;
-    height: 205px; */
     width: 320px;
     height: 205px;
 }
@@ -695,10 +693,6 @@ section{
 }
 
 /* popular places */
-/* #test{
-    /* border: 5px red solid; */
-    display: flex;
-        justify-content: center;
-        flex-flow: column nowrap;
-
-} */
+.flight-card{
+    border: 5px red solid;
+}
